Overflow scrolling bug fix

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -5,13 +5,14 @@
       top: 0;
       width: 100%;
       height: 100%;
-      // overflow: auto;
       overflow-y: scroll;
       -webkit-overflow-scrolling: touch;
       z-index: 1; 
     }
     .main { 
       min-height: 100%;
+      overflow-y: scroll;
+      -webkit-overflow-scrolling: touch;
     }
 
     body.showing-details .main {
